--- a/src/app/post/post.component.scss
+++ b/src/app/post/post.component.scss
@@ -1,6 +1,6 @@
 ion-grid {
     margin-top: 1.5em;
-    /* border: .2px solid lightgray; */
+    border: .2px solid lightgray;
     padding: 0;
 
     .post-info {
